tests/analyze/builtin-no-annotation/analyze.snap
---
source: tests/analyze.rs
assertion_line: 41
expression: output
---
error: `built-in` requires a type annotation on the enclosing `def`.
> 1 | def length = built-in "list-length"
                   ^^^^^^^^^^^^^^^^^^^^^^
